--- a/historico.html
+++ b/historico.html
@@ -37,6 +37,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="produtos.html">Produtos</a>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
                     </ul>
                     <div class="navbar-icons d-flex">
                         <a href="carrinho.html" class="nav-link position-relative">
