--- a/produtos.html
+++ b/produtos.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="index.html#sobre">Sobre</a></li>
                         <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                         <li class="nav-item"><a class="nav-link active" href="produtos.html">Produtos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contato.html">Contato</a></li>
                     </ul>
                     <div class="navbar-icons d-flex">
                         <a href="carrinho.html" class="nav-link position-relative">
